Tests/Bad/double_declare.min
function main;
beginparams
endparams
beginlocals
	n : integer;
	r : array [10] of integer;
	n : array [10] of integer;
endlocals
beginbody
 	read n;
 	n := n + 1;
 	write n;
 endbody
